# vision-service

./: .dockerignore  .gitignore  README.md  dockerfile  pyproject.toml
.github/workflows/: ci.yml
app/: config.py  main.py
app/api/: routes_img2txt.py  routes_txt2img.py
app/models/: infer_queue.py
app/service/: img2txt_service.py  txt2img_service.py
app/static/: img2txt_test.html  txt2img_test.html
scripts/: entrypoint.sh
tests/: conftest.py  profile_img2txt.py  test_infer_queue.py  test_routes_img2txt.py  test_routes_txt2img.py  test_smoke.py  test_ws_img2txt.py  test_ws_txt2img.py
