[project]
name = "vision-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi>=0.119.0",
    "pydantic-settings>=2.6.0",
    "uvicorn[standard]>=0.37.0",
    "diffusers>=0.35.1",
    "torchvision>=0.23.0",
    "transformers==4.54.1",
    "protobuf==6.32.1",
    "sentencepiece==0.2.1",
    "tiktoken==0.12.0",
    "python-multipart>=0.0.20",
]

[dependency-groups]
dev = [
    "pre-commit>=4.3.0",
    "pytest>=8.4.2",
    "pytest-asyncio>=1.2.0",
]